--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script type="text/javascript" src="objectContainer.js"></script>
 
         <script type="text/javascript" src="object/control/controlpad.js"></script>
+        <script type="text/javascript" src="camera.js"></script>
+        <script type="text/javascript" src="map.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
