--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <script type="text/javascript" src="object/control/controlpad.js"></script>
         <script type="text/javascript" src="map.js"></script>
+        <script type="text/javascript" src="camera.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
