--- a/AppList/index2.html
+++ b/AppList/index2.html
@@ -2,8 +2,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
     <script type="text/javascript" src="jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="lazyload.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <body onload ="main()">
         <div class="wrap" id="wrap">
@@ -22,7 +24,7 @@
                         <a href="daum.net">최신 업데이트</a></div>
                     </li>
                     -->
-                </main>    
+                </main>
             </ul>  
         </div>
         <footer>
